# mccompress

./: .gitattributes  Cargo.toml  LICENSE  README.md
src/: clean-junk.rs  mccompress.rs  recompress-region.rs  region.rs  test-for-junk.rs
tests/data/: r.0.0.mca
