[package]
name = "mccompress"
version = "0.1.0"
authors = ["Toon Schoenmakers <nighteyes1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1"
byteorder = "1"
clap = "3.0.0-beta.1"
walkdir = "2"
threadpool = "1"

[[bin]]
name = "mccompress"
path = "src/mccompress.rs"